# devices-stm32f4-extras-xpack

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README-MAINTAINER.md  README.md  meson.build  package.json
cmake/: add_devices_libraries.cmake
include/micro-os-plus/: device.h
meson/symbol-names/: meson.build
meta/: CMakeLists.txt  micro-os-plus-devices-stm32f4-extras-config-version.cmake  micro-os-plus-devices-stm32f4-extras-config.cmake  xpack-helper.cmake
scripts/: generate-all-devices-vectors.sh
sources/: CMakeLists.txt
sources/src/vectors/: vectors_stm32f405xx.c  vectors_stm32f411xe.c  vectors_stm32f412cx.c  vectors_stm32f417xx.c
src/vectors/: vectors_stm32f401xc.c  vectors_stm32f401xe.c  vectors_stm32f405xx.c  vectors_stm32f407xx.c  vectors_stm32f410cx.c  vectors_stm32f410rx.c  vectors_stm32f410tx.c  vectors_stm32f411xe.c  vectors_stm32f412cx.c  vectors_stm32f412rx.c  vectors_stm32f412vx.c  vectors_stm32f412zx.c  vectors_stm32f413xx.c  vectors_stm32f415xx.c  vectors_stm32f417xx.c  vectors_stm32f423xx.c  vectors_stm32f427xx.c  vectors_stm32f429xx.c  vectors_stm32f437xx.c  vectors_stm32f439xx.c  vectors_stm32f446xx.c  vectors_stm32f469xx.c  vectors_stm32f479xx.c
