#
# This file is part of the µOS++ distribution.
#   (https://github.com/micro-os-plus)
# Copyright (c) 2022 Liviu Ionescu
#
# Permission to use, copy, modify, and/or distribute this software
# for any purpose is hereby granted, under the terms of the MIT license.
#
# If a copy of the license was not distributed with this file, it can
# be obtained from https://opensource.org/licenses/MIT/.
#
# -----------------------------------------------------------------------------

# TODO: generate it automatically.
devices_stm32f4_symbol_names = [
  'STM32F401xc',
  'STM32F401xe',
  'STM32F405xx',
  'STM32F407xx',
  'STM32F410cx',
  'STM32F410rx',
  'STM32F410tx',
  'STM32F411xe',
  'STM32F412cx',
  'STM32F412rx',
  'STM32F412vx',
  'STM32F412zx',
  'STM32F413xx',
  'STM32F415xx',
  'STM32F417xx',
  'STM32F423xx',
  'STM32F427xx',
  'STM32F429xx',
  'STM32F437xx',
  'STM32F439xx',
  'STM32F446xx',
  'STM32F469xx',
  'STM32F479xx',
]

# -----------------------------------------------------------------------------
